<resources>
    <string name="app_name">NavigatorDrawer</string>
    <string name="txv_user">usuario</string>
    <string name="txv_email">email@email.com</string>
    <string name="action_home">Inicio</string>
    <string name="action_dependency">Dependencias</string>
    <string name="action_sector">Sectores</string>
    <string name="navigation_subheader">Otras opciones</string>
    <string name="action_help">Ayuda</string>
    <string name="action_settings">Configuración</string>
</resources>
